Car price history CRUD implemented
